works now, has some music words

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,17 +12,17 @@
 <body>
   <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">GOOGLE BOOKS SEARCH</a>
+      <a class="navbar-brand" href="/">Spotify Song Search</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="/">Search Books</a>
+          <a class="nav-link" href="/">Search Music</a>
           {{#if loggedIn}}
           <a class="nav-link" href="/logout" id="logout">Logout</a>
-          <a class="nav-link" href="/profile">See My Books</a>
+          <a class="nav-link" href="/profile">See My Playlists</a>
           {{else}}
           <a class="nav-link" href="/login">Login/Sign-up</a>
           {{/if}}
