--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,6 +6,10 @@
   </div>
   <div class="row">
     <form id="search-form">
+      <select name="searchType" id="searchType">
+        <option value="artist">Artist</option>
+        <option value="song">Song</option>
+      </select>
       <div class="mb-3">
         <label for="search" class="form-label">Music To Search For</label>
         <input type="text" class="form-control" id="search" />
