search results look nice

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -6,7 +6,8 @@
   <img src={{this.image}} class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">{{this.songName}}</h5>
-    <p class="card-text">{{this.artistName}}</p>
+    <h6 class="card-text">{{this.artistName}}</h6>
+    <button type="button" onclick="">Add Song</button>
   </div>
 </div>
 {{/each}}
