logging in or signing up succesfully automatically redirects you to the homepage now

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
           <a class="nav-link" href="/">Search Music</a>
           {{#if loggedIn}}
           <a class="nav-link" href="/logout" id="logout">Logout</a>
-          <a class="nav-link" href="/profile">See My Playlists</a>
+          <a class="nav-link" href="/playlist">See My Playlists</a>
           {{else}}
           <a class="nav-link" href="/login">Login/Sign-up</a>
           {{/if}}
