--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,15 +1,18 @@
 <div class="container">
-<div class="row">
-
-{{#each tracks}}
-<div class="card col-3" style="width: 18rem;">
-  <img src={{this.image}} class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">{{this.songName}}</h5>
-    <h6 class="card-text">{{this.artistName}}</h6>
-    <button type="button" onclick="">Add Song</button>
+  <div class="row">
+    {{#each tracks}}
+    <div class="card col-3" style="width: 18rem;">
+      <form method="post" id="newSongData">
+        <img src={{this.image}} class="card-img-top" alt="..." id="albumArt">
+          <div class="card-body">
+            <h5 class="card-title" id="songName">{{this.songName}}</h5>
+            <h6 class="card-text" id="artistName">{{this.artistName}}</h6>
+            <button type="button" onclick="saveSong()" id="addSongBtn">Add Song</button>
+          </div>  
+      </form>
+    </div>
+    {{/each}}
   </div>
 </div>
-{{/each}}
-</div>
-</div>
+
+<script src="/js/addSong.js"></script>
