--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,6 +31,8 @@
     </div>
   </nav>
   {{{body}}}
+  {{!-- just want to add background image
+  <img src="../../image/background.jpg" alt="background-image"> --}}
   {{#if loggedIn}}
   <script src="/js/logout.js"></script>
   {{/if}}
