--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,16 +1,16 @@
-<div class="container-fluid py-5">
+<div class="container-fluid py-5 bg-dark">
   <div class="row">
     <div class="col text-center">
-      <h1 class="display-5 fw-bold">Search for Music</h1>
+      <h1 class="display-5 fw-bold bg-light">Search for Music</h1>
     </div>
   </div>
-  <div class="row">
-    <form id="search-form">
+  <div class="row bg-dark">
+    <form id="search-form bg-dark">
       <div class="mb-3">
         <label for="search" class="form-label">Music To Search For</label>
         <input type="text" class="form-control" id="search" />
       </div>
-      <button type="submit" class="btn btn-primary">Search</button>
+      <button type="submit" class="btn btn-primary bg-success">Search</button>
     </form>
   </div>
 </div>
