--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -2,12 +2,12 @@
 <div class="row">
 
 {{#each tracks}}
-<div class="card col-3" style="width: 18rem;">
+<div class="card col-3 bg-dark" style="width: 18rem;">
   <img src={{this.image}} class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">{{this.songName}}</h5>
-    <h6 class="card-text">{{this.artistName}}</h6>
-    <button type="button" onclick="">Add Song</button>
+    <h5 class="card-title bg-dark">{{this.songName}}</h5>
+    <h6 class="card-text bg-dark">{{this.artistName}}</h6>
+    <button type="button bg-success" onclick="">Add Song</button>
   </div>
 </div>
 {{/each}}
