--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="row">
     {{#each tracks}}
-    <div class="card col-3" style="width: 18rem;">
+    <div class="randomstuff card col-3" style="width: 18rem;">
       <form method="post" id="newSongData">
         <img src={{this.image}} class="card-img-top" alt="..." id="albumArt">
           <div class="card-body">
             <h5 class="card-title" id="songName">{{this.songName}}</h5>
             <h6 class="card-text" id="artistName">{{this.artistName}}</h6>
-            <button type="button" onclick="saveSong()" id="addSongBtn">Add Song</button>
+            <button type="button" onclick="" class="addSongBtn">Add Song</button>
           </div>  
       </form>
     </div>
