css is back in. /controllers/apiroutes/userRoutes.js may be junk

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row bg-dark">
-    <form id="search-form bg-dark">
+    <form id="search-form" class="bg-dark">
       <div class="mb-3">
         <label for="search" class="form-label">Music To Search For</label>
         <input type="text" class="form-control" id="search" />
