--- a/views/playlist.handlebars
+++ b/views/playlist.handlebars
@@ -2,12 +2,12 @@
 <div class="row">
   <h3>Im Rendering</h3>
 {{!-- needs work below --}}
-{{#each playlistSongData}}
+{{#each tracks}}
 <div class="card col-3" style="width: 18rem;">
   <img src={{this.albumArt}} class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title bg-dark">{{this.songName}}</h5>
-    <h6 class="card-text bg-dark">{{this.artistName}}</h6>
+    <h5 class="card-title">{{this.songName}}</h5>
+    <h6 class="card-text">{{this.artistName}}</h6>
   </div>
 </div>
 {{/each}}
