--- a/views/playlist.handlebars
+++ b/views/playlist.handlebars
@@ -1,15 +1,22 @@
 <div class="container">
+
 <div class="row">
-  <h3>Im Rendering</h3>
-{{!-- needs work below --}}
-{{#each tracks}}
-<div class="card col-3" style="width: 18rem;">
-  <img src={{this.albumArt}} class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">{{this.songName}}</h5>
-    <h6 class="card-text">{{this.artistName}}</h6>
+  <div class="row">
+    {{#each tracks}}
+    <div class="randomstuff card col-3" style="width: 18rem;">
+      <form method="post" id="newSongData">
+            <h6 class="text-white" id="id">{{this.id}}</h6>
+        <img src={{this.albumArt}} class="card-img-top" alt="..." id="albumArt">
+          <div class="card-body">
+            <h4 class="card-title" id="songName">{{this.songName}}</h4>
+            <h5 class="card-text" id="artistName">{{this.artistName}}</h5>
+            <button type="button" onclick="" class="removeSongBtn bg-danger">Remove Song</button>
+          </div>  
+      </form>
+    </div>
+    {{/each}}
+
   </div>
 </div>
-{{/each}}
-</div>
-</div>
+
+<script src="/js/removeSong.js"></script>
