--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,12 +1,12 @@
 <div class="container-fluid py-5 bg-dark">
   <div class="row">
     <div class="col text-center">
-      <h1 class="display-5 fw-bold bg-light">Search for Music</h1>
+      <h1 class="display-5 fw-bold bg-dark text-white">Search for Music</h1>
     </div>
   </div>
   <div class="row bg-dark">
     <form id="search-form" class="bg-dark">
-      <div class="mb-3">
+      <div class="mb-5">
         <label for="search" class="form-label">Music To Search For</label>
         <input type="text" class="form-control" id="search" />
       </div>
