--- a/views/playlist.handlebars
+++ b/views/playlist.handlebars
@@ -10,7 +10,7 @@
           <div class="card-body">
             <h4 class="card-title" id="songName">{{this.songName}}</h4>
             <h5 class="card-text" id="artistName">{{this.artistName}}</h5>
-            <button type="button" onclick="" class="removeSongBtn bg-danger">Remove Song</button>
+            <button type="button" onclick="" class="btn removeSongBtn bg-danger">Remove Song</button>
           </div>  
       </form>
     </div>
