added some more css

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,7 @@
-<div class="container-fluid py-5 bg-dark">
+<div class="container-fluid h-100 py-5 bg-dark">
   <div class="row">
     <div class="col text-center">
-      <h1 class="display-5 fw-bold bg-dark text-white">Search for Music</h1>
+      <h1 class="display-5 fw-bold text-white">Search for Music</h1>
     </div>
   </div>
   <div class="row bg-dark">
@@ -10,9 +10,14 @@
         <label for="search" class="form-label">Music To Search For</label>
         <input type="text" class="form-control" id="search" />
       </div>
-      <button type="submit" class="btn btn-primary bg-success">Search</button>
+      <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-primary bg-success">Search</button>
+      </div>
     </form>
   </div>
 </div>
-
+<div class="container-fluid py-5 bg-dark"></div>
+<div class="container-fluid py-5 bg-dark"></div>
+<div class="container-fluid py-5 bg-dark"></div>
+<div class="container-fluid py-5 bg-dark"></div>
 <script src="/js/search.js"></script>
