--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -9,7 +9,8 @@
           <div class="card-body">
             <h5 class="card-title" id="songName">{{this.songName}}</h5>
             <h6 class="card-text" id="artistName">{{this.artistName}}</h6>
-            <button type="button" onclick="" class="addSongBtn">Add Song</button>
+            <button type="button" class="addSongBtn">Add Song</button>
+            <div style="display: none;" id="myDIV">✅</div>
           </div>  
       </form>
     </div>
