--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,40 +1,41 @@
+<div class="container">
 <div class="row justify-space-between-md">
-  <div class="login-card">
-    <h2 class="page-title">Login</h2>
+  <div class="col card login-card">
+    <h2 class="page-title mt-3 pb-3">Login</h2>
     <form class="form login-form">
-      <div class="form-group">
+      <div class="form-group mt-3">
         <label for="email-login">Email:</label>
         <input class="form-input" type="text" id="email-login" />
       </div>
-      <div class="form-group">
+      <div class="form-group mt-3 pb-3">
         <label for="password-login">Password:</label>
         <input class="form-input" type="password" id="password-login" />
       </div>
-      <div class="form-group">
+      <div class="form-group mt-4">
         <button class="btn btn-primary bg-success" type="submit">Login</button>
       </div>
     </form>
   </div>
-  <div class="login-card">
-    <h2 class="page-title">Signup</h2>
+  <div class="col card login-card">
+    <h2 class="page-title mt-3">Signup</h2>
     <form class="form signup-form">
-      <div class="form-group">
+      <div class="form-group mt-3">
         <label for="username-signup">Username:</label>
         <input class="form-input" type="text" id="username-signup" />
       </div>
-      <div class="form-group">
+      <div class="form-group mt-3">
         <label for="email-signup">Email:</label>
         <input class="form-input" type="text" id="email-signup" />
       </div>
-      <div class="form-group">
+      <div class="form-group mt-3">
         <label for="password-signup">Password:</label>
         <input class="form-input" type="password" id="password-signup" />
       </div>
-      <div class="form-group">
+      <div class="form-group mt-3 mb-2">
         <button class="btn btn-primary bg-success" type="submit">Signup</button>
       </div>
     </form>
   </div>
 </div>
-
+</div>
 <script src="/js/login.js"></script>
